--- a/conditions.yaml
+++ b/conditions.yaml
@@ -1,7 +1,7 @@
 - name: Conditonals demo
   hosts: localhost
   connection: local
-  task:
+  tasks:
     - name: if x is grater then 10
       when: x > 10
       ansible.builtin.debug:
