--- a/conditions.yaml
+++ b/conditions.yaml
@@ -3,11 +3,11 @@
   connection: local
   tasks:
     - name: if x is grater then 10
-      when: x > 10
+      when: x|int > 10
       ansible.builtin.debug:
         msg: "x is grater then 10"
 
     - name: if x is lesser then 10
-      when: x < 10
+      when: x|int < 10
       ansible.builtin.debug:
         msg: "x is lesser then 10"
