--- a/04-conditions.yaml
+++ b/04-conditions.yaml
@@ -1,6 +1,8 @@
 - name: Conditonals demo
   hosts: localhost
   connection: local
+  vars:
+    x= 10
   tasks:
     - name: if x is grater then 10
       when: x|int > 10
