--- a/04-conditions.yaml
+++ b/04-conditions.yaml
@@ -22,11 +22,11 @@
   connection: local
   tasks:
     - name: if apple is fruit
-      when: y | true
+      when: y | bool
       ansible.builtin.debug:
         msg: "apple is a fruit"
 
     - name: if apple is not a fruit
-      when: not (y | false)
+      when: not (y | bool)
       ansible.builtin.debug:
         msg: "apple is not a fruit"
