conditionals practicte in ansible

--- a/03-variable.yaml
+++ b/03-variable.yaml
@@ -54,11 +54,11 @@
     b: carrot
   tasks:
     - name: call a varible item is fruit
-      when: "{{ a }}"
+      when: a == "apple"
       ansible.builtin.debug:
         msg: "{{ a }} is a fruit"
 
     - name: call varibale when item is vegitable
-      when: "{{ b }}"
+      when: b == "carrot"
       ansible.builtin.debug:
         msg: "{{ b }} is a begitable"
