error handling in ansbile

--- a/06-error-handling.yaml
+++ b/06-error-handling.yaml
@@ -5,6 +5,7 @@
     - name: shell
       ansible.builtin.shell: cat /etc/passwd | grep jhon
       register: out
+      ignore_errors: yes
 
     - name: print
       ansible.builtin.debug:
