--- a/07-templates.yaml
+++ b/07-templates.yaml
@@ -3,7 +3,7 @@
   connection: local
   tasks:
     - name: copy templates
-      ansible.builtin.copy:
+      ansible.builtin.templates:
         src: text.txt
         dest: /tmp/text.txt
 
