--- a/08-variables-self.yaml
+++ b/08-variables-self.yaml
@@ -1,9 +1,9 @@
 - name: variables calling from the playbook
   hosts: localhost
   connection: local
-  vars:
-    fruit: apple
-    price: 50
+#  vars:
+#  fruit: apple
+#    price: 50
   tasks:
     - name: caling from the play book
       ansible.builtin.debug:
